[gd_scene format=3 uid="uid://cp4bcvlxnhnc"]

[ext_resource type="FontFile" uid="uid://cro0ihcubbiiq" path="res://font/CaesarDressing-Regular.ttf" id="1_jpx6t"]
[ext_resource type="Script" uid="uid://byky56schudcc" path="res://scripts/misc/selection_list_item.gd" id="1_s8aos"]

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_s8aos"]
bg_color = Color(0.578394, 0.583627, 0.56991893, 1)
border_width_left = 175

[node name="SelectionListItem" type="Control" unique_id=1889729719]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_s8aos")

[node name="Panel" type="Panel" parent="." unique_id=512020612]
layout_mode = 0
offset_right = 1792.0
offset_bottom = 192.0
mouse_filter = 2
theme_override_styles/panel = SubResource("StyleBoxFlat_s8aos")

[node name="RankLabel" type="Label" parent="." unique_id=78621234]
layout_mode = 0
offset_left = 8.0
offset_top = 48.0
offset_right = 99.0
offset_bottom = 166.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_jpx6t")
theme_override_font_sizes/font_size = 96
text = "#01"

[node name="TitleLabel" type="Label" parent="." unique_id=81542521]
layout_mode = 0
offset_left = 176.0
offset_top = 16.0
offset_right = 572.0
offset_bottom = 134.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_jpx6t")
theme_override_font_sizes/font_size = 96
text = "File Name"

[node name="FilePathLabel" type="Label" parent="." unique_id=186846008]
layout_mode = 0
offset_left = 184.0
offset_top = 120.0
offset_right = 909.0
offset_bottom = 179.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_jpx6t")
theme_override_font_sizes/font_size = 48
text = "C:/this/is/the/file/path/to/the.json"

[node name="SubjectLabel" type="Label" parent="." unique_id=1159007933]
layout_mode = 0
offset_left = 1208.0
offset_top = 40.0
offset_right = 1727.0
offset_bottom = 158.0
theme_override_colors/font_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("1_jpx6t")
theme_override_font_sizes/font_size = 96
text = "English"
horizontal_alignment = 2

[connection signal="ready" from="." to="." method="_on_ready"]
